apps/web/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: portfolio
        image: ghcr.io/maxwlang/react-portfolio:v2.0.0
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "4000m"
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-login-secret
